@@ -12,6 +12,10 @@
 	original string, return the latter and throw away the former; thanks
 	to Pablo Polvorin.
 
+	* c_src/exmpp_stringprep.c, c_src/Makefile.am: Use exmpp_driver.h.
+	Remove start/stop callbacks and the private data structure as they're
+	unused. Rename commands to COMMAND_*.
+
 2008-12-08  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	Fixed several warnings issued by Intel C Compiler.
